Fix spacing on project

--- a/src/stylesheets/module/_browser.scss
+++ b/src/stylesheets/module/_browser.scss
@@ -53,7 +53,7 @@
     @include respond-to(medium) {
         display: block;
         position: absolute;
-        top: 10%;
+        top: 5%;
         left: -14%;
     }
 }
