--- a/src/stylesheets/module/_hero.scss
+++ b/src/stylesheets/module/_hero.scss
@@ -4,13 +4,6 @@
     padding-top: 35px * 4;
 }
 
-.hero-bar {
-    margin-right: 2.5%;
-    margin-left: 2.5%;
-    position: absolute;
-    top: 35px;
-}
-
 .hero-block {
     background-color: #222;
     box-shadow: 0 2px 10px rgba(#000,.1),
@@ -18,7 +11,11 @@
     color: #fff;
     font-weight: 600;
     padding: .3em 1em;
+    position: fixed;
     // text-transform: uppercase;
+    z-index: 20;
+    top: 35px;
+    right: 35px;
 }
 
 .hero-link {
